Chore: Remove MSVC build files

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,3 @@
-bin/
-bin64/
-arm64/
-vs.proj/Debug
-vs.proj/Release
-vs.proj/.vs
-vs.proj/x64
-vs.proj/ARM64
-vs.proj/NppPluginDemo.opensdf
-vs.proj/NppPluginDemo.sdf
-*.suo
-*.sln
-vs.proj/NppPluginDemo.exp
-vs.proj/NppPluginDemo.lib
-*.aps
-vs.proj/NppPluginDemo.vcxproj.user
-*.zip
-*.bak
+*.o
+*.dll
+*.exe
